# NMR

./: pyproject.toml  setup.py
neural_renderer/cuda/: create_texture_image_cuda.cpp  create_texture_image_cuda_kernel.cu  load_textures_cuda.cpp  rasterize_cuda.cpp  rasterize_cuda_kernel.cu
