[build-system]
requires = ["setuptools>=61.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_renderer_pytorch"
version = "1.1.3"
description = "PyTorch implementation of 'A 3D mesh renderer for neural networks'"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }

authors = [
    { name = "Nikolaos Kolotouros", email = "nkolot@seas.upenn.edu" }
]

dependencies = []

[tool.setuptools.packages.find]
where = ["neural_renderer"]

[tool.setuptools]
# Include the CUDA extension logic in setup.py
# Static metadata lives in pyproject.toml
